# bargain

./: CMakeLists.txt  bargain.c
functions/: exit_program.c  prints.c  product_filter.c  product_string.c  remove_product.c  search_function.c  settings.c  shopping_list.c  start_function.c  store_filter.c
header/: exit_program.h  prints.h  product_filter.h  product_string.h  remove_product.h  search_function.h  settings.h  shopping_list.h  start_function.h  store_filter.h
